fusion del menu para mobile

--- a/clase8.html
+++ b/clase8.html
@@ -46,14 +46,14 @@
         .email{
             font-size: var(--sm);
             font-weight: 300 !important;
-            color: #FAAB78;
+            color:  var(--rojo-claro);
         }
         .mobile-menu ul:nth-child(1) {
             border-bottom: 1px solid var(--rojo-claro)
            
         }
         .sign-out{
-            color: purple !important;
+            color:var(--rojo-claro)!important;
             font-size: var(--sm);
 
         }
